Remove io.apptik.json